added documentation for read memory usage
